Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18718

Kernel panic on lcommon_cl.c:150:cl_file_inode_init()) LBUG, lcommon_cl.c:150:cl_file_inode_init()) ASSERTION( (((inode->i_mode) & 00170000) == 0100000) )

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [4198002.609689] LustreError: 2262558:0:(lcommon_cl.c:150:cl_file_inode_init()) ASSERTION( (((inode->i_mode) & 00170000) == 0100000) ) failed:
      [4198002.611562] LustreError: 2262558:0:(lcommon_cl.c:150:cl_file_inode_init()) LBUG
      [4198002.612288] CPU: 1 PID: 2262558 Comm: rm Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.16.1.el8_lustre.ddn17.x86_64 #1
      [4198002.614401] Call Trace:
      [4198002.614918]  dump_stack+0x41/0x60
      [4198002.615407]  lbug_with_loc.cold.8+0x5/0x58 [libcfs]
      [4198002.615951]  cl_file_inode_init+0x216/0x390 [lustre]
      [4198002.616539]  ? ll_rw_stats_tally+0x3c0/0x3c0 [lustre]
      [4198002.617079]  ll_update_inode+0x44f/0x710 [lustre]
      [4198002.617605]  ll_iget+0x228/0x320 [lustre]
      [4198002.618114]  ll_prep_inode+0x3e5/0xa10 [lustre]
      [4198002.618621]  ? lustre_swab_generic_32s+0x10/0x10 [ptlrpc]
      [4198002.619271]  ll_lookup_it_finish.constprop.32+0xce/0x10a0 [lustre]
      [4198002.619779]  ? ll_lock_cancel_bits+0x900/0x900 [lustre]
      [4198002.620277]  ? ll_intent_lock+0x426/0x840 [lustre]
      [4198002.620769]  ll_lookup_it+0x82f/0x1840 [lustre]
      [4198002.621255]  ? ll_inode_permission+0x1d1/0x3c0 [lustre]
      [4198002.621635]  ? kmem_cache_free+0x116/0x300
      [4198002.621978]  ? path_init+0x1c9/0x370
      [4198002.622314]  ll_lookup_nd+0x112/0x1c0 [lustre]
      [4198002.622675]  __lookup_hash+0x75/0xa0
      [4198002.623006]  ? _cond_resched+0x15/0x30
      [4198002.623346]  do_unlinkat+0x156/0x300
      [4198002.623685]  do_syscall_64+0x5b/0x1a0
      [4198002.624022]  entry_SYSCALL_64_after_hwframe+0x66/0xcb
      [4198002.624360] RIP: 0033:0x7ff95ee9213b
      

      Attachments

        Activity

          People

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: